--- a/index.html
+++ b/index.html
@@ -463,6 +463,7 @@ div.WordSection1
  <o:shapelayout v:ext="edit">
   <o:idmap v:ext="edit" data="1"/>
  </o:shapelayout></xml><![endif]-->
+	<img alt="image001.jpg" src="https://github.com/powergel/powergel.github.io/blob/main/image001.jpg?raw=true" data-hpc="true" class="Box-sc-g0xbh4-0 fzFXnm">
 </head>
 
 <body lang=EN-US style='tab-interval:.5in'>
