changed image name

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="image001.jpeg" alt="Image 001">
+        <img src="image001.jpg" alt="Image 001">
     </div>
 </body>
 </html>
