--- a/index.html
+++ b/index.html
@@ -26,6 +26,14 @@
 <body>
     <div class="container">
         <img src="image001.jpg" alt="Image 001">
+        <img src="image002.jpg" alt="Image 001">
+        <img src="image003.jpg" alt="Image 001">
+        <img src="image004.jpg" alt="Image 001">
+        <img src="image005.jpg" alt="Image 001">
+        <img src="image001.jpg" alt="Image 001">
+        <img src="image001.jpg" alt="Image 001">
+        <img src="image001.jpg" alt="Image 001">
+        <img src="image001.jpg" alt="Image 001">
     </div>
 </body>
 </html>
