--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         body {
             display: flex;
             justify-content: center;
-            align-items: center;
+            align-items: flex-start;  /* Changed to flex-start to ensure images are at the top */
             height: 100vh;
             margin: 0;
             background-color: #f0f0f0;
@@ -21,24 +21,23 @@
             padding: 10px;
         }
         img {
-            max-width: 100%;
-            height: auto;
-            margin: 10px;
+            width: 100%;          /* Ensure the image doesn't overflow */
+            height: auto;         /* Maintain the aspect ratio */
+            max-width: 600px;     /* Optional: Limit max width if the image is too large */
         }
     </style>
 </head>
 <body>
     <table>
         <tr>
-            <td><img src="image001.jpg" alt="Image 001"></td>
+            <td><img src="image001.jpeg" alt="Image 001"></td>
         </tr>
         <tr>
-            <td><img src="image002.jpg" alt="Image 002"></td>
+            <td><img src="image001.jpeg" alt="Image 002"></td>
         </tr>
         <tr>
-            <td><img src="image003.jpg" alt="Image 003"></td>
+            <td><img src="image001.jpeg" alt="Image 003"></td>
         </tr>
-        <!-- Add more rows for more images -->
     </table>
 </body>
 </html>
