change image name

--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
 <body>
     <table>
         <tr>
-            <td><img src="image001.jpeg" alt="Image 001"></td>
+            <td><img src="image001.jpg" alt="Image 001"></td>
         </tr>
         <tr>
-            <td><img src="image001.jpeg" alt="Image 002"></td>
+            <td><img src="image001.jpg" alt="Image 002"></td>
         </tr>
         <tr>
-            <td><img src="image001.jpeg" alt="Image 003"></td>
+            <td><img src="image001.jpg" alt="Image 003"></td>
         </tr>
     </table>
 </body>
