--- a/index.html
+++ b/index.html
@@ -30,16 +30,16 @@
 <body>
     <table>
         <tr>
-            <td><img src="page12.jpg" alt="Image 001"></td>
+            <td><img src="Page4.jpg" alt="Page 1"></td>
         </tr>
         <tr>
-            <td><img src="page13.jpg" alt="Image 002"></td>
+            <td><img src="Page5.jpg" alt="Page 2"></td>
         </tr>
         <tr>
-            <td><img src="page14.jpg" alt="Image 003"></td>
+            <td><img src="Page6.jpg" alt="Image 003"></td>
         </tr>
         <tr>
-            <td><img src="page15.jpg" alt="Image 003"></td>
+            <td><img src="Page7.jpg" alt="Image 003"></td>
         </tr>
          <tr>
             <td><img src="page16.jpg" alt="Image 003"></td>
