--- a/Ethica.html
+++ b/Ethica.html
@@ -30,29 +30,29 @@
 <body>
     <table>
           <tr>
-            <td><img src="AG Care Love Your Curls_20240625101401 (1)_page-0001.jpg" alt="Page 1"></td>
+            <td><img src="0.jpg" alt="Page 1"></td>
         </tr>
        
         <tr>
-            <td><img src="AG Care Love Your Curls_20240625101401 (1)_page-0002.jpg" alt="Page 1"></td>
+            <td><img src="1.jpg" alt="Page 1"></td>
          <tr/>
              <tr>
-            <td><img src="AG Care Love Your Curls_20240625101401 (1)_page-0003.jpg" alt="Page 1"></td>
+            <td><img src="2.jpg" alt="Page 1"></td>
          <tr>
          <tr>
-            <td><img src="AG Care Love Your Curls_20240625101401 (1)_page-0004.jpg" alt="Page 1"></td>
+            <td><img src="3.jpg" alt="Page 1"></td>
         <tr/>
             <tr>
-            <td><img src="AG Care Love Your Curls_20240625101401 (1)_page-0005.jpg" alt="Page 1"></td>
+            <td><img src="4.jpg" alt="Page 1"></td>
          </tr>
          <tr>
-            <td><img src="AG Care Love Your Curls_20240625101401 (1)_page-0006.jpg" alt="Page 1"></td>
+            <td><img src="5.jpg" alt="Page 1"></td>
          </tr>
          <tr>
-            <td><img src="AG Care Love Your Curls_20240625101401 (1)_page-0007.jpg" alt="Page 1"></td>
+            <td><img src="6.jpg" alt="Page 1"></td>
          </tr>
          <tr>
-            <td><img src="AG Care Love Your Curls_20240625101401 (1)_page-0008.jpg" alt="Page 1"></td>
+            <td><img src="7.jpg" alt="Page 1"></td>
          </tr>
          
     </table>
