Update and rename mothersday2025 to mothersday2025.html

--- a/mothersday2025.html
+++ b/mothersday2025.html
@@ -30,7 +30,7 @@
 <body>
     <table>
           <tr>
-            <td><img src="AG Care Love Your Curls_20240625101401 (1)_page-0001.jpg" alt="Page 1"></td>
+            <td><img src="Mothers day2025.jpg" alt="Page 1"></td>
         </tr>
        
      
