--- a/invitation.html
+++ b/invitation.html
@@ -8,10 +8,11 @@
         body {
             display: flex;
             justify-content: center;
-            align-items: flex-start;  /* Changed to flex-start to ensure images are at the top */
+            align-items: flex-start;
             height: 100vh;
             margin: 0;
             background-color: #f0f0f0;
+            flex-direction: column; /* So the image and link are stacked vertically */
         }
         table {
             border-collapse: collapse;
@@ -21,18 +22,34 @@
             padding: 10px;
         }
         img {
-            width: 100%;          /* Ensure the image doesn't overflow */
-            height: auto;         /* Maintain the aspect ratio */
-            max-width: 600px;     /* Optional: Limit max width if the image is too large */
+            width: 100%;
+            height: auto;
+            max-width: 600px;
+        }
+        .link-container {
+            margin-top: 10px;
+            text-align: center;
+        }
+        .link-container a {
+            text-decoration: none;
+            color: #0066cc;
+            font-weight: bold;
+        }
+        .link-container a:hover {
+            text-decoration: underline;
         }
     </style>
 </head>
 <body>
     <table>
-          <tr>
+        <tr>
             <td><img src="invitation1 copy.jpg" alt="Page 1"></td>
-         </tr>
-         
+        </tr>
     </table>
+    <div class="link-container">
+        <a href="https://parks.canada.ca/pn-np/ab/jasper/visit/lieuxlouer-rentalvenues/athabasca" target="_blank">
+            Click for location directions
+        </a>
+    </div>
 </body>
 </html>
